feat: product, category, newsletter api
