# docs/swagger.json
@@ -222,20 +222,18 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Login",
-                        "name": "login",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.LoginRequest"
-                        }
+                        "type": "integer",
+                        "description": "limit number of newsletter",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.LoginResponse"
+                            "$ref": "#/definitions/domain.NewsletterLisyResponse"
                         }
                     }
                 }
@@ -329,6 +327,35 @@
             }
         },
         "/products": {
+            "get": {
+                "description": "get product information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limit number of products",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ProductsListResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create new product",
                 "consumes": [
@@ -349,13 +376,40 @@
                         "required": true
                     },
                     {
-                        "description": "Product Request",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.ProductRequest"
-                        }
+                        "type": "integer",
+                        "name": "available",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "category_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "description",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "price",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "supplier_id",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -407,6 +461,37 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/domain.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/supplier": {
+            "get": {
+                "description": "get suppliers information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product_management"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limit number of suppliers",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuppliersListResponse"
                         }
                     }
                 }
@@ -571,6 +656,52 @@
                 }
             }
         },
+        "domain.NewsletterLisyResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Newsletters"
+                    }
+                }
+            }
+        },
+        "domain.Newsletters": {
+            "type": "object",
+            "required": [
+                "description",
+                "id",
+                "image",
+                "subtitle",
+                "textcolor",
+                "title",
+                "type"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "subtitle": {
+                    "type": "string"
+                },
+                "textcolor": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.OK": {
             "type": "object",
             "properties": {
@@ -579,17 +710,8 @@
                 }
             }
         },
-        "domain.ProductRequest": {
+        "domain.Products": {
             "type": "object",
-            "required": [
-                "available",
-                "category_id",
-                "description",
-                "image",
-                "name",
-                "price",
-                "supplier_id"
-            ],
             "properties": {
                 "available": {
                     "type": "integer"
@@ -599,6 +721,9 @@
                 },
                 "description": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "image": {
                     "type": "string"
@@ -611,6 +736,17 @@
                 },
                 "supplier_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "domain.ProductsListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Products"
+                    }
                 }
             }
         },
@@ -653,6 +789,34 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "domain.Suppliers": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.SuppliersListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Suppliers"
+                    }
                 }
             }
         },
