# internal/http/controller/products.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"net/http"
+	"strconv"
 	"swclabs/swipe-api/internal/core/domain"
 	"swclabs/swipe-api/internal/core/service"
 
@@ -11,15 +12,16 @@ import (
 type IProducts interface {
 	GetNewsletter(c echo.Context) error
 	GetCategories(c echo.Context) error
+	GetProductLimit(c echo.Context) error
 }
 
 type Products struct {
-	service domain.IProductService
+	product domain.IProductService
 }
 
 func NewProducts() IProducts {
 	return &Products{
-		service: service.NewProductService(),
+		product: service.NewProductService(),
 	}
 }
 
@@ -28,11 +30,25 @@ func NewProducts() IProducts {
 // @Tags products
 // @Accept json
 // @Produce json
-// @Param login body domain.LoginRequest true "Login"
-// @Success 200 {object} domain.LoginResponse
+// @Param limit query int true "limit number of newsletter"
+// @Success 200 {object} domain.NewsletterLisyResponse
 // @Router /newsletter [GET]
 func (p *Products) GetNewsletter(c echo.Context) error {
-	return nil
+	_limit, err := strconv.Atoi(c.QueryParam("limit"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, domain.Error{
+			Msg: "Invalid 'limit' query parameter",
+		})
+	}
+	newsletter, err := p.product.GetNewsletter(c.Request().Context(), _limit)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, domain.Error{
+			Msg: err.Error(),
+		})
+	}
+	return c.JSON(http.StatusOK, domain.NewsletterLisyResponse{
+		Data: newsletter,
+	})
 }
 
 // GetCategories
@@ -51,7 +67,7 @@ func (p *Products) GetCategories(c echo.Context) error {
 		})
 	}
 
-	resp, err := p.service.GetCategoriesLimit(c.Request().Context(), limit)
+	resp, err := p.product.GetCategoriesLimit(c.Request().Context(), limit)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, domain.Error{
 			Msg: err.Error(),
@@ -60,5 +76,31 @@ func (p *Products) GetCategories(c echo.Context) error {
 
 	return c.JSON(http.StatusOK, domain.CategoriesList{
 		Data: resp,
+	})
+}
+
+// GetProductLimit
+// @Description get product information
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param limit query int true "limit number of products"
+// @Success 200 {object} domain.ProductsListResponse
+// @Router /products [GET]
+func (p *Products) GetProductLimit(c echo.Context) error {
+	_limit, err := strconv.Atoi(c.QueryParam("limit"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, domain.Error{
+			Msg: "Invalid 'limit' query parameter",
+		})
+	}
+	prd, err := p.product.GetProductsLimit(c.Request().Context(), _limit)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, domain.Error{
+			Msg: err.Error(),
+		})
+	}
+	return c.JSON(http.StatusOK, domain.ProductsListResponse{
+		Data: prd,
 	})
 }
